# CppXTemplate

./: CMakeLists.txt  main.cpp
LibTemplate/: CMakeLists.txt  FindThirdLibName.cmake
LibTemplate/include/: LibTemplate.h
LibTemplate/src/: LibTemplate.cpp
